--- a/src/pages/Board/BoardCard/BoardCard.module.css
+++ b/src/pages/Board/BoardCard/BoardCard.module.css
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   width: 300px;
   max-height: 100%;
+  margin-right: 10px;
   padding: 10px 10px;
   overflow-y: auto;
   color: rgb(23, 43, 77);
