--- a/src/pages/Board/BoardCard/Task/Task.module.css
+++ b/src/pages/Board/BoardCard/Task/Task.module.css
@@ -4,8 +4,7 @@
   flex-wrap: wrap;
   width: 100%;
   border-radius: 4px;
-
-  row-gap: 10px;
+  /* row-gap: 10px; */
 }
 .plus {
   display: inline-block;
