--- a/src/pages/Board/BoardCard/Task/TaskContent/TaskContent.module.css
+++ b/src/pages/Board/BoardCard/Task/TaskContent/TaskContent.module.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  margin-bottom: 10px;
   padding: 10px;
   background-color: white;
   border-radius: 4px;
